fix swagger for create status
