# docs/swagger.json
@@ -19,9 +19,20 @@
             "post": {
                 "description": "Create new task status.",
                 "tags": [
-                    "status_handler"
+                    "Statuses"
                 ],
                 "summary": "CreateStatus",
+                "parameters": [
+                    {
+                        "description": "required JSON body with status name",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.CreateStatusParams"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Status was created successfully",
@@ -46,6 +57,17 @@
         }
     },
     "definitions": {
+        "service.CreateStatusParams": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "service.CreateStatusResponse": {
             "type": "object",
             "properties": {
